{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 57,
  "lineage": "e92a9168-a24f-8f84-7088-c263cebac6ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "DevOps-Lab-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382826953872:route-table/rtb-0822723a4bdf6da2e",
            "default_route_table_id": "rtb-0822723a4bdf6da2e",
            "id": "rtb-0822723a4bdf6da2e",
            "owner_id": "382826953872",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b96e50acbea473c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testifi-routetable"
            },
            "tags_all": {
              "Name": "testifi-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-085d7bc5655181df5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.DevOps-Lab-igw",
            "aws_vpc.DevOps-Lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382826953872:security-group/sg-074e75a000dd72858",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074e75a000dd72858",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.192.80.12/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "3.121.56.176/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "382826953872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testifi-default-sg"
            },
            "tags_all": {
              "Name": "testifi-default-sg"
            },
            "vpc_id": "vpc-085d7bc5655181df5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DevOps-Lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testifi-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2162f7f3582e92f",
            "arn": "arn:aws:ec2:us-east-1:382826953872:instance/i-0f89dea5cb076af5c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f89dea5cb076af5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-031fccba7d87adfdd",
            "private_dns": "ip-10-10-10-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.40",
            "public_ip": "34.229.222.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd41d7e9e4bfe1ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce0430b90cacca3b",
            "tags": {
              "Name": "testifi-server"
            },
            "tags_all": {
              "Name": "testifi-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074e75a000dd72858"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-sg",
            "aws_key_pair.ssh-key",
            "aws_subnet.DevOps-Lab-Subnet",
            "aws_vpc.DevOps-Lab",
            "data.aws_ami.latest-ubuntu-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DevOps-Lab-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382826953872:internet-gateway/igw-05b96e50acbea473c",
            "id": "igw-05b96e50acbea473c",
            "owner_id": "382826953872",
            "tags": {
              "Name": "testifi-igw"
            },
            "tags_all": {
              "Name": "testifi-igw"
            },
            "vpc_id": "vpc-085d7bc5655181df5"
          },
          "dependencies": [
            "aws_vpc.DevOps-Lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DevOps-Lab-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382826953872:subnet/subnet-0ce0430b90cacca3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce0430b90cacca3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382826953872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testifi-subnet"
            },
            "tags_all": {
              "Name": "testifi-subnet"
            },
            "vpc_id": "vpc-085d7bc5655181df5"
          },
          "dependencies": [
            "aws_vpc.DevOps-Lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DevOps-Lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382826953872:vpc/vpc-085d7bc5655181df5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-01a289339dede581d",
            "default_route_table_id": "rtb-0822723a4bdf6da2e",
            "default_security_group_id": "sg-074e75a000dd72858",
            "dhcp_options_id": "dopt-059b12599185b2817",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085d7bc5655181df5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0822723a4bdf6da2e",
            "owner_id": "382826953872",
            "tags": {
              "Name": "testifi-vpc"
            },
            "tags_all": {
              "Name": "testifi-vpc"
            }
          }
        }
      ]
    }
  ]
}